Use Files.readString where appropriate