@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2022 the original author or authors.
+ * Copyright 2018-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -334,7 +334,7 @@ abstract class JsonFileItemWriterFunctionalTests {
 	}
 
 	private String getContent(File file) throws IOException {
-		return new String(Files.readAllBytes(file.toPath()), Charset.defaultCharset());
+		return Files.readString(file.toPath(), Charset.defaultCharset());
 	}
 
 }
